--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = espressif32
 board = m5stack-core2
 framework = arduino
-lib_deps=m5stack/M5Core2@^0.1.2
+lib_deps=
+    m5stack/M5Core2@^0.1.2
+    fastled/FastLED@^3.5.0
 upload_port = /dev/ttyUSB0
 upload_speed = 2000000
 monitor_speed = 115200
