--- a/platformio.ini
+++ b/platformio.ini
@@ -12,17 +12,16 @@
 platform = espressif32
 board = m5stack-core2
 framework = arduino
-lib_deps=
-    m5stack/M5Core2@^0.1.2
-    fastled/FastLED@^3.5.0
-;upload_port = /dev/ttyUSB0
+lib_deps = 
+	m5stack/M5Core2@^0.1.2
+	fastled/FastLED@^3.5.0
+	lvgl/lv_arduino@^3.0.1
 upload_speed = 2000000
 monitor_speed = 115200
-monitor_flags=--raw
+monitor_flags = --raw
 board_build.partitions = default_16MB.csv
-build_flags =
-    -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
-    -DCORE_DEBUG_LEVEL=5
-    -DCONFIG_ARDUHAL_LOG_COLORS=1 
-
+build_flags = 
+	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+	-DCORE_DEBUG_LEVEL=5
+	-DCONFIG_ARDUHAL_LOG_COLORS=1
